concordium-std/tests/derive-serial/fail-forward-without-repr.stderr
error: 'repr(..)' attribute must be set on the type when using 'forward' attribute
 --> tests/derive-serial/fail-forward-without-repr.rs:5:10
  |
5 | #[derive(Serial)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Serial` (in Nightly builds, run with -Z macro-backtrace for more info)
